kubernetes/letsencrypt/demo/echo_ingress_stage.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - echo1.35.198.131.59.nip.io
    - echo2.35.198.131.59.nip.io
    secretName: echo-tls
  rules:
  - host: echo1.35.198.131.59.nip.io
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.35.198.131.59.nip.io
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
